--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
 - Player management (e.g. multi-tenant)
 - More robust player login script
 - COPY command to copy over some scripts (e.g. start-angband.sh) to make Dockerfile neater
+- temp/perm root access for my management
