--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,2 @@
-- Better user management. It's very manual and kinda... janky lol
-- Security: instead of appending users, dump username as file with contents being the email. That way it is write protected. Then update admin scripts
+- RLs to add: nethack, rogue
+- Look into self-service or more automated user registration
