--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 - RLs to add: [brogueCE]
     - brogueCE: may need to wget from releases: https://github.com/tmewett/BrogueCE/releases -> it isn't in a debian repo anywhere
+    - brogueCE: may need SDL, too
 - Look into self-service or more automated user registration
 - Other features, like tmux/screen, chat, global leaderboards, etc.
